Add Arch Linux instructions and update workflow triggers
Added Arch Linux link to the documentation homepage and expanded the Arch README with detailed build instructions. Updated GitHub Actions workflow to trigger on tag pushes in addition to main branch.

--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -28,6 +28,10 @@ const tagName = release.tag_name;
       href=`https://github.com/kaito-tokyo/obs-backgroundremoval-lite/releases/download/${tagName}/obs-backgroundremoval-lite-${tagName}-x86_64-linux-gnu.deb`
       >Ubuntu</a
     >
+    <a
+      href="https://github.com/kaito-tokyo/obs-backgroundremoval-lite/tree/main/unsupported/arch#readme"
+      >Arch Linux</a
+    >
   </div>
 </Layout>
 
