--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -32,6 +32,10 @@ const tagName = release.tag_name;
       href="https://github.com/kaito-tokyo/obs-backgroundremoval-lite/tree/main/unsupported/arch#readme"
       >Arch Linux</a
     >
+    <a
+      href="https://github.com/kaito-tokyo/obs-backgroundremoval-lite/tree/main/unsupported/flatpak#readme"
+      >Flatpak</a
+    >
   </div>
 </Layout>
 
