Update index.astro (#109)
* Update index.astro

* Update index.astro

--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -17,20 +17,24 @@ const tagName = release.tag_name;
   </p>
   <div class="links">
     <a
-      href=`https://github.com/kaito-tokyo/obs-backgroundremoval-lite/releases/download/${tagName}/obs-backgroundremoval-lite-${tagName}-windows-x64.zip`
+      href=`https://github.com/kaito-tokyo/obs-backgroundremoval-lite/releases/download/${tagName}/backgroundremoval-lite-${tagName}-windows-x64.zip`
       >Windows</a
     >
     <a
-      href=`https://github.com/kaito-tokyo/obs-backgroundremoval-lite/releases/download/${tagName}/obs-backgroundremoval-lite-${tagName}-macos-universal.pkg`
+      href=`https://github.com/kaito-tokyo/obs-backgroundremoval-lite/releases/download/${tagName}/backgroundremoval-lite-${tagName}-macos-universal.pkg`
       >Mac</a
     >
     <a
-      href=`https://github.com/kaito-tokyo/obs-backgroundremoval-lite/releases/download/${tagName}/obs-backgroundremoval-lite-${tagName}-x86_64-linux-gnu.deb`
+      href=`https://github.com/kaito-tokyo/obs-backgroundremoval-lite/releases/download/${tagName}/backgroundremoval-lite-${tagName}-x86_64-linux-gnu.deb`
       >Ubuntu</a
     >
     <a
       href="https://github.com/kaito-tokyo/obs-backgroundremoval-lite/tree/main/unsupported/arch#readme"
       >Arch Linux</a
+    >
+    <a
+      href="https://github.com/kaito-tokyo/obs-backgroundremoval-lite/tree/main/unsupported/flatpak#readme"
+      >Flatpak</a
     >
   </div>
 </Layout>
