--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import { joinURL } from 'ufo';
 import Layout from "../layouts/Layout.astro";
 import { getLatestRelease } from "../lib/github";
 
@@ -17,7 +18,7 @@ const tagName = release.tag_name;
   </p>
   <div style="display: flex; flex-direction: column; align-items: center; margin: 2em 0 2em 0;">
     <img
-      src="/demo.gif"
+      src={joinURL(import.meta.env.BASE_URL, 'demo.gif')}
       alt="Background Removal Lite Demo"
       width="480"
       style="border:1px solid #ccc; border-radius:8px; box-shadow:0 2px 8px #0002;"
