--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -77,9 +77,11 @@ const tagName = release.tag_name;
     margin-top: 2em;
   }
   .links a {
-    display: inline-block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 10px 20px;
-    background-color: #4caf50; /* Green */
+    background-color: #4caf50;
     color: white;
     text-align: center;
     text-decoration: none;
