--- a/docs/src/layouts/MarkdownLayout.astro
+++ b/docs/src/layouts/MarkdownLayout.astro
@@ -1,4 +1,6 @@
 ---
+import { joinURL } from "ufo";
+
 interface Props {
   frontmatter: {
     title: string;
@@ -7,6 +9,7 @@ interface Props {
 }
 
 const { title, lang } = Astro.props.frontmatter;
+const { BASE_URL } = import.meta.env;
 
 const backToTopText = lang === "ja" ? "トップページへ戻る" : "Back to Top";
 ---
@@ -15,7 +18,11 @@ const backToTopText = lang === "ja" ? "トップページへ戻る" : "Back to T
 <html lang={lang}>
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href={joinURL(BASE_URL, "favicon-96x96.png")} sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href={joinURL(BASE_URL, "favicon.svg")} />
+    <link rel="shortcut icon" href={joinURL(BASE_URL, "favicon.ico")} />
+    <link rel="apple-touch-icon" sizes="180x180" href={joinURL(BASE_URL, "apple-touch-icon.png")} />
+    <link rel="manifest" href={joinURL(BASE_URL, "site.webmanifest")} />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
