--- a/docs/src/pages/building/arch.astro
+++ b/docs/src/pages/building/arch.astro
@@ -6,7 +6,7 @@ const { BASE_URL } = import.meta.env;
 <Layout title="Building on Arch Linux" lang="en">
   <h1>Building Live Background Removal Lite on Arch Linux</h1>
   <p>
-    The recommended way to build Live Background Removal Lite on Arch Linux is to use the provided <code>PKGBUILD</code> script in <a href={BASE_URL + "unsupported/arch/"}>unsupported/arch/</a>.
+    The recommended way to build Live Background Removal Lite on Arch Linux is to use the provided <code>PKGBUILD</code> script in <a href="https://github.com/kaito-tokyo/live-backgroundremoval-lite/tree/main/unsupported/arch">unsupported/arch/</a>.
   </p>
   <h2>Steps</h2>
   <ol>
@@ -29,6 +29,7 @@ cd live-backgroundremoval-lite/unsupported/arch</code></pre>
     </li>
   </ol>
   <p>
-    For more details, see the <a href={BASE_URL + "unsupported/arch/README.md"}>Arch Linux packaging documentation</a>.
+    For more details, see the <a href="https://github.com/kaito-tokyo/live-backgroundremoval-lite/tree/main/unsupported/arch#readme">Arch Linux packaging documentation</a>.
   </p>
+  <a href="/">Back to Top</a>
 </Layout>
