--- a/docs/src/pages/gpu.astro
+++ b/docs/src/pages/gpu.astro
@@ -49,6 +49,9 @@ const { BASE_URL } = import.meta.env;
     <li>Build the plugin from source with GPU support enabled (Linux only at present).
       <ul>
         <li>
+          See <a href={joinURL(BASE_URL, "building/macos/")}>macOS build instructions</a>
+        </li>
+        <li>
           See <a href={joinURL(BASE_URL, "building/ubuntu/")}>Ubuntu build instructions</a>
         </li>
         <li>
