--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -67,6 +67,7 @@ const tagName = release.tag_name;
   <nav>
     <ul>
       <li><a href={joinURL(BASE_URL, "gpu/")}>GPU Acceleration</a></li>
+      <li><a href={joinURL(BASE_URL, "building/macos/")}>Building on macOS</a></li>
       <li><a href={joinURL(BASE_URL, "building/ubuntu/")}>Building on Ubuntu</a></li>
       <li><a href={joinURL(BASE_URL, "building/arch/")}>Building on Arch Linux</a></li>
       <li><a href={githubURL}>GitHub Repository</a></li>
