--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -64,7 +64,7 @@ const tagName = release.tag_name;
       >Flatpak</a
     >
   </div>
-  <nav>
+  <nav aria-label="Main documentation navigation">
     <ul>
       <li><a href={joinURL(BASE_URL, "gpu/")}>GPU Acceleration</a></li>
       <li><a href={joinURL(BASE_URL, "building/macos/")}>Building on macOS</a></li>
