--- a/docs/src/pages/building/macos.astro
+++ b/docs/src/pages/building/macos.astro
@@ -38,8 +38,7 @@ cd live-backgroundremoval-lite</code></pre>
     </li>
     <li>
       <strong>Install the plugin:</strong>
-      <pre><code>
-rm -rf ~/Library/Application\ Support/obs-studio/plugins/live-backgroundremoval-lite.plugin
+      <pre><code>rm -rf ~/Library/Application\ Support/obs-studio/plugins/live-backgroundremoval-lite.plugin
 cp -r ./build_homebrew/RelWithDebInfo/live-backgroundremoval-lite.plugin ~/Library/Application\ Support/obs-studio/plugins
 </code></pre>
       <p>
