--- a/docs/src/pages/building/arch.astro
+++ b/docs/src/pages/building/arch.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "../../layouts/Layout.astro";
+import { joinURL } from "ufo";
 const { BASE_URL } = import.meta.env;
 ---
 
@@ -31,5 +32,5 @@ cd live-backgroundremoval-lite/unsupported/arch</code></pre>
   <p>
     For more details, see the <a href="https://github.com/kaito-tokyo/live-backgroundremoval-lite/tree/main/unsupported/arch#readme">Arch Linux packaging documentation</a>.
   </p>
-  <a href={BASE_URL}>Back to Top</a>
+  <a href={joinURL(BASE_URL, "")}>Back to Top</a>
 </Layout>
