--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -64,9 +64,37 @@ const tagName = release.tag_name;
       >Flatpak</a
     >
   </div>
+
+  <div style="text-align: center;">
+    <a
+      href={joinURL(BASE_URL, "interactive-help/")}
+      class="ask-anything-button"
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="32"
+        height="32"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        style="vertical-align: middle; margin-right: 0.5em;"
+        ><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"
+        ></path></svg
+      >
+      <span style="vertical-align: middle; font-weight: bold;"
+        >Ask Anything (Experimental)</span
+      >
+    </a>
+  </div>
+
   <nav aria-label="Main documentation navigation">
     <ul>
-      <li><a href={joinURL(BASE_URL, "building/arch/")}>Building on Arch Linux</a></li>
+      <li>
+        <a href={joinURL(BASE_URL, "building/arch/")}>Building on Arch Linux</a>
+      </li>
       <li><a href={githubURL}>GitHub Repository</a></li>
     </ul>
   </nav>
