--- a/docs/src/pages/404.astro
+++ b/docs/src/pages/404.astro
@@ -2,7 +2,11 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="404 Not Found" lang="en">
+<Layout
+  lang="en"
+  title="404 Not Found"
+  description="The requested page could not be found."
+>
   <h1>404 Not Found</h1>
   <a href="/">Back to Top</a>
 </Layout>
