Update color variable and installation link
Added --color-box-shadow CSS variable in Layout.astro for improved styling. Changed installation link in index.astro to use BASE_URL instead of githubURL for correct navigation.

--- a/docs/src/layouts/Layout.astro
+++ b/docs/src/layouts/Layout.astro
@@ -47,6 +47,7 @@ const { BASE_URL } = import.meta.env;
   :root {
     --color-bg: #000;
     --color-white-box-bg: #fff;
+    --color-box-shadow: #0000001a;
   }
 
   main.white-box {
