--- a/docs/src/pages/installation.astro
+++ b/docs/src/pages/installation.astro
@@ -9,12 +9,14 @@ const { BASE_URL } = import.meta.env;
   title="How to install?"
   description="Instructions for installing Live Background Removal Lite on various operating systems."
 >
-  <h1>How to install?</h1>
-  <h2>Windows</h2>
-  <h2>macOS</h2>
-  <h2>Ubuntu</h2>
-  <h2>Arch Linux</h2>
-  <h2>Flatpak</h2>
-  <h2>Other Linux distributions</h2>
-  <a href={joinURL(BASE_URL, "")}>Back to Top</a>
+  <main class="white-box">
+    <h1>How to install?</h1>
+    <h2>Windows</h2>
+    <h2>macOS</h2>
+    <h2>Ubuntu</h2>
+    <h2>Arch Linux</h2>
+    <h2>Flatpak</h2>
+    <h2>Other Linux distributions</h2>
+    <a href={joinURL(BASE_URL, "")}>Back to Top</a>
+  </main>
 </Layout>
