Add install page and update navigation links
Created a new install.astro page with detailed installation instructions for multiple platforms. Updated index.astro to link to the new install page instead of installation.astro. Renamed installation.astro to usage.astro and updated its content to focus on usage. Improved 404.astro layout with a main container.

--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -102,7 +102,7 @@ const structuredData = {
       </div>
       <ul>
         <li>
-          <a href={joinURL(BASE_URL, "installation/")}> How to install? </a>
+          <a href={joinURL(BASE_URL, "install/")}> How to install? </a>
         </li>
       </ul>
     </section>
