--- a/docs/src/pages/404.astro
+++ b/docs/src/pages/404.astro
@@ -7,6 +7,8 @@ import Layout from "../layouts/Layout.astro";
   title="404 Not Found"
   description="The requested page could not be found."
 >
-  <h1>404 Not Found</h1>
-  <a href="/">Back to Top</a>
+  <main class="white-box">
+    <h1>404 Not Found</h1>
+    <a href="/">Back to Top</a>
+  </main>
 </Layout>
