--- a/docs/src/pages/usage.astro
+++ b/docs/src/pages/usage.astro
@@ -1,7 +1,13 @@
 ---
-import Layout from "../layouts/Layout.astro";
 import { joinURL } from "ufo";
+import Layout from "../layouts/Layout.astro";
+import { getLatestRelease } from "../lib/github.js";
+import { dependencies, name } from "../../../buildspec.json";
+const githubURL = `https://github.com/kaito-tokyo/${name}`;
 const { BASE_URL } = import.meta.env;
+
+const release = await getLatestRelease();
+const tagName = release.tag_name;
 ---
 
 <Layout
@@ -10,13 +16,7 @@ const { BASE_URL } = import.meta.env;
   description="Instructions for installing Live Background Removal Lite on various operating systems."
 >
   <main class="white-box">
-    <h1>How to install?</h1>
-    <h2>Windows</h2>
-    <h2>macOS</h2>
-    <h2>Ubuntu</h2>
-    <h2>Arch Linux</h2>
-    <h2>Flatpak</h2>
-    <h2>Other Linux distributions</h2>
+    <h1>Usage</h1>
     <a href={joinURL(BASE_URL, "")}>Back to Top</a>
   </main>
 </Layout>
