--- a/docs/src/pages/install.astro
+++ b/docs/src/pages/install.astro
@@ -90,7 +90,8 @@ const tagName = release.tag_name;
         <ul>
           <li>
             <strong>Terminal Way:</strong> Open a terminal and run:<br /><code
-              >sudo dpkg -i ./{`${name}-${tagName}-x86_64-linux-gnu.deb`}</code>
+              >sudo dpkg -i ./{`${name}-${tagName}-x86_64-linux-gnu.deb`}</code
+            >
           </li>
           <li>
             <strong>GUI Way:</strong> Double-click the <code
